manifests/log-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-api
  labels:
    app: log-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-api
  template:
    metadata:
      labels:
        app: log-api
    spec:
      containers:
      - name: log-api
        image: log-api:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
