manifests/robot-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-service
  template:
    metadata:
      labels:
        app: robot-service
    spec:
      containers:
      - name: robot-service
        image: robot-service:latest
        ports:
        - containerPort: 8000
