manifests/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30880
  type: NodePort
