manifests/log-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-api
  labels:
    app: log-api
spec:
  selector:
    app: log-api
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30180
  type: NodePort
