manifests/robot-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robot-service
spec:
  selector:
    app: robot-service
  ports:
  - port: 8000
    targetPort: 8000
